--- a/main.tex
+++ b/main.tex
@@ -134,7 +134,7 @@
     \begin{paracol}{2}
         % ----- STRENGTHS -----
         \cvsection{Strengths}
-            \cvtag{C}
+            \cvtag{C Programming}
             \cvtag{CAD}
             \cvtag{Control Systems}
             \cvtag{Emacs}
