--- a/main.tex
+++ b/main.tex
@@ -219,7 +219,7 @@
         % ----- ABOUT ME -----
         \cvsection{About Me}
             \begin{quote}
-                A dynamic and motivated individual with a passion for Linux and technology, driven by a desire to solve complex problems. Always striving to learn and improve, with strong communication and teamwork skills.
+                A dynamic and motivated individual with a passion for Linux, technology and automation, driven by a desire to solve complex problems. Always striving to learn and improve, with strong communication and teamwork skills.
             \end{quote}
         % ----- ABOUT ME -----
         
